--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "look up ip's gps",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
+    "test": "mocha test"
   },
   "keywords": [
     "opengps",
@@ -12,5 +12,15 @@
     "gps"
   ],
   "author": "no7david@gmail.com",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "request": "^2.79.0",
+    "request-promise": "^4.1.1"
+  },
+  "devDependencies": {
+    "co-mocha": "^1.1.2",    
+    "istanbul": "0.4.1",
+    "mocha": "^2.3.4",
+    "should": "^8.0.1"    
+  }
 }
