--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "co": "^4.6.0",
+    "list-ips": "^1.0.6",
+    "lodash": "^4.17.4",
     "mongoose": "^4.8.2",
     "request": "^2.79.0",
     "request-promise": "^4.1.1"
